objects/Standard_Goal_Detail__c.object
<CustomObject>
    <description>This object holds the specifics of a Goal Template. Each Goal Template will have multiple Detail records. These records are templates for application to individuals, and if used to create any Personal Goals, those will relate back to this record for easy identification and review.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used in lookups only</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baseline_Percentage__c</fullName>
        <label>Baseline %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Baseline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Baseline</label>
        <referenceTo>Standard_Goal_Detail__c</referenceTo>
        <relationshipName>Standard_Goal_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condition_Handling__c</fullName>
        <inlineHelpText>Give transaction credit to:
•	Conditions OR Ownership: Owners, plus any time conditions are met
•	Conditions only = Conditions are met, regardless of owner
•	Conditions AND Ownership: Owner, but only if conditions are met</inlineHelpText>
        <label>Condition Handling</label>
        <picklist>
            <picklistValues>
                <fullName>Conditions OR Ownership</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Conditions only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditions AND Ownership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>SGD{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GTD_Comments__c</fullName>
        <label>GTD Comments</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GT_Basline__c</fullName>
        <description>This field is only for developer use. Not added on any layout</description>
        <inlineHelpText>This field is only for developer use. Not added on any layout</inlineHelpText>
        <label>GT Basline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Goal_Type__c.Standard_Goal__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Goal_Type__c</referenceTo>
        <relationshipLabel>Goal Template Details</relationshipLabel>
        <relationshipName>Master_Goal_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Standard_Goal_Detail__c</referenceTo>
        <relationshipLabel>Goal Template Details (Parent)</relationshipLabel>
        <relationshipName>Goal_Template_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Goal__c</fullName>
        <label>Goal Template</label>
        <referenceTo>Standard_Goal__c</referenceTo>
        <relationshipLabel>Goal Template Details</relationshipLabel>
        <relationshipName>Standard_Goal_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <label>Target Type</label>
        <picklist>
            <picklistValues>
                <fullName>Explicit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paced</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <description>Added in CR-20160307-9680.</description>
        <label>Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>IF(
	AND(NOT(ISNULL(Amount__c)),Amount__c &gt; 0),

	    &quot;$&quot; &amp; 
            IF(Amount__c &gt;= 1000000,
	       TEXT(FLOOR(Amount__c / 1000000)) &amp; &quot;,&quot;,
	       &quot;&quot;) &amp;
	    IF(Amount__c &gt;= 1000,
               RIGHT(TEXT(FLOOR(Amount__c / 1000)), 3) &amp; &quot;,&quot;,
               &quot;&quot;) &amp;
            RIGHT(TEXT(FLOOR(Amount__c)), 3),

	IF(
		AND(NOT(ISNULL(Count__c)),Count__c  &gt; 0),
		TEXT(Count__c),
		IF(
			AND(NOT(ISNULL(Percent__c)),Percent__c &gt; 0),
			TEXT(Percent__c*100) + &quot;%&quot;,
			&apos;&apos;
		) 
	) 
)</formula>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighting__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weighting</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Goal Template Detail</label>
    <nameField>
        <label>Goal Template Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Template Details</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>